[package]
name = "synthehol"
version = "0.1.0"
authors = ["Brendan Dolan-Gavitt <brendandg@nyu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.0"

[dependencies]
id-arena = "2.2.1"
lalrpop = { version = "0.19.0", features = ["lexer"] }
lalrpop-util = "0.19.0"
regex = "1"
simple-error = "0.2.1"
z3 = "0.6.0"
